--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,23 +2,22 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "PyDebug: Current File",
-            "type": "python",
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args" : [],
-            "justMyCode" : true
-       
+            "args": [],
+            "justMyCode": true
         },
         {
-            "name": "PyDebug: Current File",
+            "name": "Python Debugger: Current File",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal",
-            "args" : [],
-            "justMyCode" : true
+            "args": [],
+            "justMyCode": true
         }
     ]
 }
